fixing script sharing

--- a/client/views/modify_metric.html
+++ b/client/views/modify_metric.html
@@ -83,7 +83,7 @@
 	<table class="table table-bordered">
 		<tr>
 			<td id="change_owner_verify"><b>Library:</b></td>
-			<td><select class="span8" id="metric_owner_change">
+			<td><select class="modify_text span8" name="collection" id="metric_owner_change">
 				{{#each libraries}}
 				<option value="{{this}}">{{this}}</option>
 				{{/each}}
