Tweaking how condition function

--- a/client/views/export.html
+++ b/client/views/export.html
@@ -15,8 +15,8 @@
 	<div class="span7 offset1">
 		<p>Here at SLSB, we make it easy for you to continue your analysis on whatever platform you want, because we've made it super easy to download all of your data for storage or analysis. The data is stored as MongoDB insert commands. If you'd like the data another way (SQL, CSV), let us know.</p>
 		<p>To get a copy, just click the "Export" button below. </p>
-		<button class="btn btn-primary pull-left" id="generate_export">Export</button>
+		<button class="btn btn-inverse pull-left" id="generate_export">Export</button>
 		<div id="export_container">
 		</div>	
 	</div>
-</template>		
+</template>
